@@ -96,3 +96,4 @@ v<1.0.0>, <01/27/2024> -- Updated all thresholder tests
 v<1.0.0>, <01/27/2024> -- Updated all thresholder examples
 v<1.0.0>, <01/27/2024> -- Updated docs with shift to V1
 v<1.0.0>, <01/27/2024> -- Updated docs with datatables
+v<1.0.0>, <06/04/2025> -- Fix for normalize function in thresh_utility.py
